--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -46,8 +46,9 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:background="#2E2E2E"
+        android:background="@color/surface"
         android:ems="10"
+        android:fontFamily="monospace"
         android:gravity="start|top"
         android:inputType="textMultiLine"
         android:padding="8dp"
