--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,4 +3,5 @@
     <color name="white">#222</color>
     <color name="black">#FFFFFF</color>
     <color name="color">#F1550D</color>
+    <color name="surface">#2E2E2E</color>
 </resources>
