--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#111</color>
     <color name="white">#FFFFFF</color>
     <color name="color">#0250C9</color>
+    <color name="surface">#E0E0E0</color>
 </resources>
